fix: minor spelling mistakes & upload button overflow

--- a/nginx/client/styles.css
+++ b/nginx/client/styles.css
@@ -184,7 +184,7 @@ header div nav a {
 
 .input_line {
     display: inline-block;
-    width: 55%;
+    width: 50%;
     max-width: 600px;
     margin-left: 0;
     color: white;
@@ -204,6 +204,7 @@ header div nav a {
     padding: 10px;
     background-color: blueviolet;
     font-size: medium;
+    color: white;
     border-color: white;
     box-sizing: border-box;
     border-style: solid;
@@ -213,10 +214,11 @@ header div nav a {
 
 #load-video {
     display: inline-block;
-    width: 35%;
-    max-width: 120px;
+    width: 40%;
+    max-width: 170px;
     height: auto;
     vertical-align: middle;
+    overflow: hidden;
 }
 
 
